[tool.poetry]
name = "lil-nudgebot"
version = "0.1.4"
description = ""
authors = []
readme = "README.md"
packages = [{include = "lil_nudgebot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
requests = "^2.28.1"
slacker = "^0.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
