[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
requests = "^2.28.1"
slack-sdk = "^3.35.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
